-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u341, 11, 17, 21, 22
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8319383 | 21.0.2 | Tobias Hartmann | P2 | Closed | Fixed | b06 |
| JDK-8319151 | 17.0.11-oracle | Tobias Hartmann | P2 | Closed | Fixed | b01 |
| JDK-8319527 | 17.0.10 | Aleksey Shipilev | P2 | Resolved | Fixed | b02 |
| JDK-8319150 | 11.0.23-oracle | Tobias Hartmann | P2 | Closed | Fixed | b01 |
| JDK-8322724 | 11.0.23 | Amos SHI | P2 | Resolved | Fixed | b01 |
| JDK-8323725 | 8u411 | Daniel Skantz | P2 | Closed | Fixed | b02 |
- backported by
-
JDK-8319527 C2: add bailout after assert Bad graph detected in build_loop_late
-
- Resolved
-
-
JDK-8322724 C2: add bailout after assert Bad graph detected in build_loop_late
-
- Resolved
-
-
JDK-8319150 C2: add bailout after assert Bad graph detected in build_loop_late
-
- Closed
-
-
JDK-8319151 C2: add bailout after assert Bad graph detected in build_loop_late
-
- Closed
-
-
JDK-8319383 C2: add bailout after assert Bad graph detected in build_loop_late
-
- Closed
-
-
JDK-8323725 C2: add bailout after assert Bad graph detected in build_loop_late
-
- Closed
-
- relates to
-
JDK-8318900 Add more bailouts to fatal paths in C2
-
- Open
-
- links to
-
Commit
openjdk/jdk11u-dev/b90b1d22
-
Commit
openjdk/jdk17u-dev/fa307335
-
Commit
openjdk/jdk21u/b743ba81
-
Commit
openjdk/jdk/83eb2065
-
Review
openjdk/jdk11u-dev/2379
-
Review
openjdk/jdk17u-dev/1933
-
Review
openjdk/jdk21u/303
-
Review
openjdk/jdk/16375