8318889: C2: add bailout after assert Bad graph detected in build_loop_late

Backport-of: 83eb20651f6b5fa0540a339921c8ad0a6d370bb7